[package]
name = "polygon_filler"
version = "0.1.0"
authors = ["Przemysław Kacprzak"]
edition = "2021"
rust-version = "1.60"

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } 
native-dialog = "0.6.3"
wavefront = "0.2.3"
rand = "0.8.5"
egui_extras = { version = "0.19.0", features = ["image"]}
image = { version = "0.24", features = ["jpeg", "png"] }
chrono = "0.4.23"

tracing-subscriber = "0.3"


[profile.release]
opt-level = 2 


[patch.crates-io]
